--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -16,10 +16,12 @@
         android:usesCleartextTraffic="true">
         <activity
             android:name=".ctMarks"
-            android:exported="false" />
+            android:exported="false"
+            android:screenOrientation="portrait"/>
         <activity
             android:name=".profile_page"
             android:exported="false"
+            android:theme="@style/Theme.AppCompat.Light.NoActionBar"
             android:screenOrientation="portrait" />
         <activity
             android:name=".Faculty_Profile"
@@ -31,13 +33,17 @@
             android:screenOrientation="portrait" />
         <activity
             android:name=".curriculum"
-            android:exported="false" />
+            android:exported="false"
+            android:screenOrientation="portrait" />
         <activity
             android:name=".result"
-            android:exported="false" />
+            android:exported="false"
+            android:screenOrientation="portrait" />
         <activity
             android:name=".profile"
             android:exported="false"
+            android:theme="@style/Theme.AppCompat.Light.NoActionBar"
+
             android:screenOrientation="portrait" />
         <activity
             android:name=".feedback_Input"
