--- a/build.gradle
+++ b/build.gradle
@@ -1,8 +1,9 @@
 buildscript {
     dependencies {
-        classpath 'com.google.gms:google-services:4.3.10'
+        classpath 'com.google.gms:google-services:4.3.15'
         classpath 'com.android.tools.build:gradle'
-        classpath 'com.android.tools.build:gradle-settings:7.4.0-alpha09'
+        classpath 'com.android.tools.build:gradle-settings:7.4.1'
+
     }
     repositories {
         google()
